<resources>
    <string name="app_name_production" translatable="false">GetPet</string>
    <string name="app_name_debug" translatable="false">GetPet Debug</string>
    <string name="ar_priglausi_mane">\"Ar priglausi mane?\"</string>
    <string name="join_us">Prisijunk</string>
    <string name="my_story">Mano istorija</string>
    <string name="no_more_pets_to_swipe">O ne!\nSąrašas baigėsi.\nPatikrink savo simpatijas!</string>
    <string name="empty_favorites_list">Mėgstamiausių gyvūnų sąrašas tuščias,\nlaikas susirasti simpatiją!</string>
    <string name="push_and_contact">Spausk ir susisiek su prieglaudos atstovu.
        \nPaminėk, kad kreipiesi per GetPet ir susitark dėl pasimatymo!</string>

    <string name="facebook_application_id" translatable="false">1043794185794352</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1043794185794352</string>

    <string name="fui_sign_in_with_google" translation_description="Sign in button text">Prisijunk su Google</string>
    <string name="fui_sign_in_with_facebook" translation_description="Sign in button text">Prisijunk su Facebook</string>

    <string name="anonymous_user_name">Svečias</string>

    <!--Onboarding STRINGS-->
    <string name="onboarding_1_heading">Labas!</string>
    <string name="onboarding_1_text">Nori būti mūsų draugu?\nSusipažink su programėle!</string>
    <string name="onboarding_2_heading">Susižavėjai?</string>
    <string name="onboarding_2_text">Nuslink patikusio gyvūno\nnuotrauką dešinėn - taip pridėsi\nją į mėgstamiausių sąrašą.</string>
    <string name="onboarding_3_heading">Deja, ne šį kartą?</string>
    <string name="onboarding_3_text">Jei nesusižavėjai,\nnuslink nuotrauką kairėn.</string>
    <string name="onboarding_4_heading">Susipažinkim!</string>
    <string name="onboarding_4_text">Paspausk ant gyvūno nuotraukos\nir perskaityk jo istoriją.</string>
    <string name="onboarding_5_heading">Priglausk!</string>
    <string name="onboarding_5_text">Paspausk „GetPet“ ir sužinok,\nkur rasi savo draugą.</string>

    <!--BUTTON STRINGS-->
    <string name="button_login_with_google">Prisijunk su Google</string>
    <string name="button_login_with_facebook">Prisijunk su Facebook</string>
    <string name="button_login">Prisijungti</string>
    <string name="button_signout">Atsijungti</string>
    <string name="button_privacy_policy">Privatumo politika</string>
    <string name="button_get_pet">GetPet</string>
    <string name="button_next">Kitas</string>
    <string name="button_end_onboarding">Baigti</string>
    <string name="delete_pet">Šalinti gyvūną iš sąrašo</string>

    <string name="my_favorite_pets">Simpatijos</string>
    <string name="my_get_pet_requests">Išrinktieji</string>

    <!--DELETE DIALOG STRINGS-->
    <string name="button_ok">Taip</string>
    <string name="button_cancel">Atšaukti</string>
    <string name="dialog_delete_title">Ištrinti</string>
    <string name="dialog_delete_message">Ar nori pašalinti gyvūną iš mėgstamiausių sąrašo?</string>
</resources>
