<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="36dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="16dp"
        android:scaleType="centerInside"
        tools:src="@drawable/dogis_kacius" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Dogis Kacius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/button_login"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_large"
            app:backgroundTint="@color/colorFacebook"
            app:icon="@drawable/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signout"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/button_signout"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_large"
            app:backgroundTint="@color/colorPrimaryDark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorText"
            android:text="@string/button_privacy_policy"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/two_logos" />

    </LinearLayout>

</LinearLayout>